--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
             </ul>
 
         </nav>
+        <div>
+            <div class="about-me__info row">
+                <div class="about-me__info--container">
+                    <figure class="about-me__picture--mask">
+                        <img src="./assets/profile_picture_white_background.jpg" alt="Picture of me!">
+                    </figure>
+                    <h1 class="about-me__info--title">
+                        Hey! I'm <span class="text--purple">Filip Tokar</span> 👋
+                    </h1>
+                    <p class="about-me__info--para">
+                        I'm <strong class="text--purple">frontend software engineer</strong> with determination for building clean, minimalistic and responsive web applications for other people to use. 
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
     </section>
 </body>
 </html>
