--- a/index.html
+++ b/index.html
@@ -1,55 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filip Tokar</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/9b04af449f.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <section id="about-me">
-        <nav>
-            <div class="personal__logo">Filip Tokar</div>
-            <ul class="nav__link--list">
-                <li>
-                    <a href="" class=
-                    "nav__link--anchor
-                    link__hover-effect
-                    link__hover-effect--black">Languages</a>
-                </li>
-                <li>
-                    <a href="" class=
-                    "nav__link--anchor
-                    link__hover-effect
-                    link__hover-effect--black">Projects</a>
-                </li>
-                <li>
-                    <a href="" class=
-                    "nav__link--anchor
-                    nav__link-primary">Contact</a>
-                </li>
-            
-            </ul>
-
-        </nav>
-        <div>
-            <div class="about-me__info row">
-                <div class="about-me__info--container">
-                    <figure class="about-me__picture--mask">
-                        <img src="./assets/profile_picture_white_background.jpg" alt="Picture of me!">
-                    </figure>
-                    <h1 class="about-me__info--title">
-                        Hey! I'm <span class="text--purple">Filip Tokar</span> 👋
-                    </h1>
-                    <p class="about-me__info--para">
-                        I'm <strong class="text--purple">frontend software engineer</strong> with determination for building clean, minimalistic and responsive web applications for other people to use. 
-                    </p>
-                </div>
-
+      <nav>
+        <div class="personal__logo">Filip Tokar</div>
+        <ul class="nav__link--list">
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Languages</a
+            >
+          </li>
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
+          </li>
+          <li>
+            <a href="" class="nav__link--anchor nav__link-primary">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="flex flex-1">
+        <div class="about-me__info row">
+          <div class="about-me__info--container">
+            <figure class="about-me__picture--mask">
+              <img
+                src="./assets/profile_picture_white_background.jpg"
+                class="about-me__picture"
+                alt="Picture of me!"
+              />
+            </figure>
+            <h1 class="about-me__info--title">
+              Hey! I'm <span class="text--purple">Filip Tokar</span> 👋
+            </h1>
+            <p class="about-me__info--para">
+              I'm
+              <strong class="text--purple">frontend software engineer</strong>
+              focused on building clean, minimalistic and responsive web
+              applications for other people to use.
+            </p>
+            <div class="about-me__links">
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-envelope"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-file"></i>
+              </a>
             </div>
-
+          </div>
+          <figure class="about-me__img--container">
+            <img src="./assets/progressive_app.svg" class="about-me__img" alt="">
+          </figure>
         </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
