--- a/index.html
+++ b/index.html
@@ -70,43 +70,161 @@
             </div>
           </div>
           <figure class="about-me__img--container">
-            <img src="./assets/progressive_app.svg" class="about-me__img" alt="">
+            <img
+              src="./assets/progressive_app.svg"
+              class="about-me__img"
+              alt=""
+            />
           </figure>
         </div>
       </div>
     </section>
     <section id="languages">
-        <div class="container">
-            <div class="row">
-                <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
-                <div class="language__list">
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">HTML</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">CSS</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">JavaScript</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="" class="language__img">
-                        </figure>
-                        <span class="language__name">React</span>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            This is my <span class="text--purple">technology stack</span>
+          </h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
             </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">CSS</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">JavaScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">React</span>
+            </div>
+          </div>
         </div>
+      </div>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="text--purple">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__image"
+                  alt="This is my project's image"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, css, JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
+                    nesciunt sequi cumque autem magni neque, vel minima. Magni,
+                    nulla quis?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://github.com/FilipTokar" target="_blank" class="project__description--link">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="www.projectsite.com" target="_blank" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__image"
+                  alt="This is my project's image"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, css, JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
+                    nesciunt sequi cumque autem magni neque, vel minima. Magni,
+                    nulla quis?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://github.com/FilipTokar" target="_blank" class="project__description--link">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="www.projectsite.com" target="_blank" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__image"
+                  alt="This is my project's image"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--sub-title">
+                    Html, css, JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
+                    nesciunt sequi cumque autem magni neque, vel minima. Magni,
+                    nulla quis?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://github.com/FilipTokar" target="_blank" class="project__description--link">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="www.projectsite.com" target="_blank" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      
     </section>
   </body>
 </html>
