--- a/index.html
+++ b/index.html
@@ -223,8 +223,41 @@
             </li>
           </ul>
         </div>
-      </div>
-      
+      </div> 
     </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img src="./assets/my_logo.png" class="footer__logo--image" alt="">
+          </figure>
+          <span class="footer__logo--popper">
+            <i class="fas fa-arrow-up" ></i>
+          </span>
+        </a>
+        <div class="footer__social--list">
+          <a href="" target="_blank" class="
+            footer__social--link
+            link__hover-effect
+            link__hofer-effect--white
+            ">GitHub</a>
+          <a href="" target="_blank" class="
+            footer__social--link
+            link__hover-effect
+            link__hofer-effect--white
+            ">LinkedIn</a>
+          <a href="mailto:filip.tokar@seznam.cz" target="_blank" class="
+            footer__social--link
+            link__hover-effect
+            link__hofer-effect--white
+            ">Email</a>
+          <a href="./assets/Example Resume.pdf" target="_blank" class="
+            footer__social--link
+            link__hover-effect
+            link__hofer-effect--white
+            ">Resume</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
