--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
       <nav>
         <div class="personal__logo">Filip Tokar</div>
         <ul class="nav__link--list">
-          <li>
+          <li class="nav__link">
             <a
-              href=""
+              href="#languages"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Languages</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a
-              href=""
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li>
-            <a href="" class="nav__link--anchor nav__link-primary">Contact</a>
+          <li class="nav__link">
+            <a href="mailto:filip.tokar@seznam.cz" class="nav__link--anchor nav__link-primary">Contact</a>
           </li>
         </ul>
       </nav>
@@ -46,7 +46,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Filip Tokar</span> 👋
+              Hey! I'm <span class="text--purple">Filip Tokar</span>&nbsp;<span class="wave">👋</span> 
             </h1>
             <p class="about-me__info--para">
               I'm
@@ -64,7 +64,7 @@
               <a href="" class="about-me__link">
                 <i class="fa-solid fa-envelope"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
                 <i class="fa-solid fa-file"></i>
               </a>
             </div>
@@ -239,22 +239,22 @@
           <a href="" target="_blank" class="
             footer__social--link
             link__hover-effect
-            link__hofer-effect--white
+            link__hover-effect--white
             ">GitHub</a>
           <a href="" target="_blank" class="
             footer__social--link
             link__hover-effect
-            link__hofer-effect--white
+            link__hover-effect--white
             ">LinkedIn</a>
           <a href="mailto:filip.tokar@seznam.cz" target="_blank" class="
             footer__social--link
             link__hover-effect
-            link__hofer-effect--white
+            link__hover-effect--white
             ">Email</a>
           <a href="./assets/Example Resume.pdf" target="_blank" class="
             footer__social--link
             link__hover-effect
-            link__hofer-effect--white
+            link__hover-effect--white
             ">Resume</a>
         </div>
       </div>
