--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
               applications for other people to use.
             </p>
             <div class="about-me__links">
-              <a href="" class="about-me__link">
+              <a href="https://www.linkedin.com/in/filiptokar/" class="about-me__link">
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="https://github.com/FilipTokar" class="about-me__link">
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="mailto:filip.tokar@seznam.cz" class="about-me__link">
                 <i class="fa-solid fa-envelope"></i>
               </a>
               <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
